welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:12: error: not found: value i
	return T(i)
                 ^